Modified in initProject